Set table overflow to scroll to fix the jittery searching

--- a/src/components/dataTable/App.css
+++ b/src/components/dataTable/App.css
@@ -14,9 +14,11 @@ footer {
 }
 
 .table {
+  display: block;
   width: 4.0in;
-  height: 110px;
+  height: 500px;
   margin-bottom: 0px;
+  overflow-y: scroll;
 }
 
 #select-area {
